--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,7 +10,7 @@ body {
 
 .wrap h1 {
 	font-weight: 500;
-	font-size: 62px;
+	font-size: 58px;
 }
 
 .wrap {
@@ -21,10 +21,19 @@ body {
 }
 
 .reset {
+	font-family: ;
+}
+
+.reset {
 	border-radius: 10px;
 	width: 100px;
 	height: 50px;
-	outline: red;
+	font-size: 20px;
 	background-color: rgb(62, 62, 62);
 	color: aliceblue;
+	font-family: 'Nerko One', system-ui;
+}
+
+.status {
+	font-size: 24px;
 }
