--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+
 .container {
 	display: grid;
 	grid-template-columns: 100px 100px 100px;
-
+	gap: 5px;
 	height: auto;
 }
 
@@ -9,4 +11,8 @@
 	height: 100px;
 	width: 100px;
 	outline: none;
+	margin: 5px;
+	border-radius: 5px;
+	font-family: 'Nerko One', system-ui;
+	font-size: 32px;
 }
